# agx_control

./: .dockerignore  .gitignore  .gitmodules  agx_gripper_api.md  can_user.md  piper_api.md  pyproject.toml
agx_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
can/: can_activate.sh  find_all_can_port.sh
communication/lcm/: README.md  arm_lcm_client.py  arm_lcm_server.py
communication/lcm/defs/: arm_cartesian_cmd_t.lcm  arm_joint_cmd_t.lcm  arm_service_cmd_t.lcm  arm_state_t.lcm
communication/lcm/msg/: ArmCartesianCmd.py  ArmJointCmd.py  ArmServiceCmd.py  ArmState.py  __init__.py
docker/: Dockerfile  README.md
examples/: joystick_control.py  keyboard_control.py
test/: firmeware.py  move_j_test.py  read_piper_l_state.py
