[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agx-control"
version = "0.1.0"
description = "AGX control examples and communication scripts"
requires-python = ">=3.8,<=3.11"
dependencies = [
    "numpy",
    "pynput",
    "lcm",
    "pygame",
    "pyAgxArm @ file:third_party/pyAgxArm",
]

[project.scripts]
arm_lcm_server = "communication.lcm.arm_lcm_server:main"
keyboard_control = "examples.keyboard_control:main"
joystick_control = "examples.joystick_control:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["communication*", "examples*"]
exclude = ["can*", "test*"]
namespaces = true
